# stupid-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: chat.py  chromadb_client.py  history.json  roles.yaml  utils.py
src/chatbot/: chat.py  chromadb_client.py  embeddings_client.py  example.py  response_client.py  utils.py
src/chatbot/resources/: remote_data_spec.md
