[build-system]
requires = ["setuptools>=64", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot"
version = "0.1.0"
description = "A simple chatbot project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Phillip Yu", email = "phillip.yu.1@Gmail.com"}]
dependencies = [
  "openai>=1.93.0",
  "chromadb>=1.0.15",
  "pyyaml>=6.0.2",
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "pre-commit"]

[project.scripts]
chatbot = "chatbot.chat:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.setuptools.package-data]
"chatbot.config" = ["*.yaml"]

